# ecom_sales_data_generator

./: .gitignore  CONFIG_GUIDE.md  LICENSE  README.md  TESTING_GUIDE.md  config_guide.md  database_schema_reference.md  dbtest.sql  environment.yml  pyproject.toml  qa_&_testing_guide.md  requirements.txt  tests.json
config/: data_profile.yaml  ecom_sales_gen_template.yaml  story_01_upstart_retailer.yaml
currentdb/: customers.csv  load_data.sql  order_items.csv  orders.csv  product_catalog.csv  return_items.csv  returns.csv  shopping_carts.csv
scripts/: db_integrity_check.sql
src/: run_data_generation.py
src/ecomgen/: run_data_generation.py
src/generators/: __init__.py  generator_carts.py  generator_catalog.py  generator_common_utils.py  generator_customers.py  generator_orders.py  generator_returns.py  inject_mess.py
src/pytests/: test_config_integrity.py  test_config_linting.py  test_data_quality_rules.py
src/tests/: __init__.py  big_audit.py  mess_audit.py  qa_tests.py
src/utils/: config.py  date_utils.py  shared_utils.py
